fix(events2024): margin sizes the same on tablet datePickers

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events2024.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events2024.scss
@@ -103,7 +103,7 @@
             @media #{$tablet-only} {
 
                 &:nth-of-type(1) {
-                    margin-right: 1em;
+                    margin-right: 0.5em;
                 }
 
                 &:nth-of-type(2) {
